# rgb

./: .gitignore  Cargo.toml  README.md  pokemon.sn1
old-src/: main.rs
old-src/cartridge/: mod.rs
old-src/cpu/: instruction.rs  opcodes.rs  registers.rs
old-src/debug/: mod.rs
old-src/memory/: mod.rs
old-src/ppu/: mod.rs
res/: opcodes.json
src/: apu.rs  cartridge.rs  cpu.rs  debug.rs  display.rs  dmg01.rs  emulator.rs  input.rs  io.rs  lib.rs  main.rs  memory.rs  ppu.rs  save.rs  util.rs
src/cartridge/: mbc1.rs  mbc3.rs  mod.rs  rom.rs  rtc.rs
src/cpu/: cycles.rs  instruction.rs  interrupt.rs  mod.rs  opcodes.rs  registers.rs  rtc.rs  sm80.rs
src/debug/: command.rs  debug_logger.rs  debug_state.rs  debuggable.rs  message.rs
src/display/: debug_canvas.rs  fps.rs  game_canvas.rs  mod.rs
src/emulator/: control.rs
src/input/: input_message.rs  joypad.rs
src/memory/: mmu.rs  mod.rs  timer.rs
src/ppu/: mod.rs
src/support/: mod.rs
src/util/: file.rs
tests/: cpu_test.rs
