[package]
name = "rgb"
version = "0.1.0"
authors = ["r1cebank <rbnk@elica.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gui", "audio"]
gui = ["minifb"]
tty = ["blockish"]
audio = ["cpal"]
debug = ["rustyline"]


[dependencies]
log = "0.4"
time = "0.2.22"
rand = "0.7.3"
strum = "0.19"
strum_macros = "0.19"
simplelog = "^0.7.6"
clap = "2.33.3"
flume = "0.9.1"
prettytable-rs = "^0.8"
minifb = { version = "0.19.1", optional = true }
cpal = { version = "0.8.0", optional = true }
blockish = { version = "0.0.8", optional = true }

rustyline = { version = "6.3.0", optional = true }

[dev-dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
