[package]
name = "rgb"
version = "0.1.0"
authors = ["r1cebank <rbnk@elica.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gui", "audio", "debug"]
gui = ["piston_window", "image", "find_folder"]
tty = ["blockish"]
audio = ["cpal"]
debug = ["cursive", "cursive_hexview"]

[dependencies]
log = "0.4"
time = "0.2.22"
rand = "0.7.3"
strum = "0.19"
strum_macros = "0.19"
simplelog = "^0.7.6"
clap = "2.33.3"
flume = "0.9.1"
find_folder = { version = "0.3.0", optional = true }
image = { version = "0.23.11", optional = true }
cpal = { version = "0.8.0", optional = true }
blockish = { version = "0.0.8", optional = true }
piston_window = { version = "0.112.0", optional = true }
cursive = { version = "0.14", optional = true, default-features = false, features = ["crossterm-backend"] }
cursive_hexview = { version = "0.3", optional = true }

[dev-dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
